--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,6 @@ envlist = py27,py36
 commands = pytest
 deps =
      pytest
-     pytest-flask
+     flask_testing
+     splinter
      -r{toxinidir}/requirements.txt
