fix. setup for CI

--- a/tox.ini
+++ b/tox.ini
@@ -8,3 +8,4 @@ deps =
      flask_testing
      splinter
      -r{toxinidir}/requirements.txt
+passenv = GENOMELINK_CLIENT_ID GENOMELINK_CLIENT_SECRET GENOMELINK_CALLBACK_URL
